edits to create a new project

--- a/src/content/docs/en/guides/migrate-to-astro/from-nuxtjs.mdx
+++ b/src/content/docs/en/guides/migrate-to-astro/from-nuxtjs.mdx
@@ -35,14 +35,12 @@ When you rebuild your Nuxt site in Astro, you will notice some important differe
 
 ## Convert your NuxtJS Project
 
-Each project migration will look different. But, there are some common steps you will need to get your new Astro site up and running.
-
-Even after following these instructions, you probably won't have your new Astro site exactly the way you want it yet. But, this page will get you started in the right direction.
+Each project migration will look different, but there are some common steps to follow when converting from Next.js to Astro. This page will get you started in the right direction.
 
 ### Create a new Astro project
 Use the `create astro` command for your package manager to launch Astro's CLI wizard or choose a community theme from the [Astro Theme Showcase](https://astro.build/themes).
 
-You can pass a `--template` argument to the `create astro` command to start a new Astro project with one of our official starters. Or, you can [start a new project from any existing Astro repository on GitHub](/en/install/auto/#starter-templates).
+You can pass a `--template` argument to the `create astro` command to start a new Astro project with one of our official starters (e.g. `docs`, `blog`, `portfolio`). Or, you can [start a new project from any existing Astro repository on GitHub](/en/install/auto/#starter-templates).
 
   <PackageManagerTabs>
     <Fragment slot="npm">
@@ -50,8 +48,8 @@ You can pass a `--template` argument to the `create astro` command to start a ne
     # launch the Astro CLI Wizard 
     npm create astro@latest
 
-    # start from any existing repo
-    npm create astro -- --template <github-username>/<github-repo>
+    # create a new project with an official example
+    npm create astro@latest -- --template <example-name>
     ```
     </Fragment>
     <Fragment slot="pnpm">
@@ -59,8 +57,8 @@ You can pass a `--template` argument to the `create astro` command to start a ne
     # launch the Astro CLI Wizard 
     pnpm create astro@latest
 
-    # start from any existing repo
-    pnpm create astro --template <github-username>/<github-repo>
+    # create a new project with an official example
+    pnpm create astro@latest --template <example-name>
     ```
     </Fragment>
     <Fragment slot="yarn">
@@ -68,8 +66,8 @@ You can pass a `--template` argument to the `create astro` command to start a ne
     # launch the Astro CLI Wizard 
     yarn create astro@latest
 
-    # start from any existing repo
-    yarn create astro --template <github-username>/<github-repo>
+    # create a new project with an official example
+    yarn create astro@latest --template <example-name>
     ```
     </Fragment>
   </PackageManagerTabs>
@@ -77,7 +75,7 @@ You can pass a `--template` argument to the `create astro` command to start a ne
 Then, copy your existing Nuxt project files over to your new Astro project in a separate folder outside of `src`.
 
 :::tip
-Prefer to explore in your browser instead? Visit https://astro.new for a variety of starter templates that can be opened and edited in StackBlitz, CodeSandbox or Gitpod.
+Visit https://astro.new for the full list of official starter templates, and links for opening a new project in StackBlitz, CodeSandbox or Gitpod.
 :::
 
 ### Install integrations (optional)
@@ -200,7 +198,7 @@ Compare the following Nuxt component and a corresponding Astro component:
 
 You may find it helpful to start by converting your Nuxt layouts and templates into [Astro layout components](/en/core-concepts/layouts/).
 
-Each Astro page explicitly requires `<html>`, `<head>`, and `<body>` tags to be present, so it is common to reuse a layout file across pages. Your Nuxt `layout.vue` and templates will not include these.
+Each Astro page explicitly requires `<html>`, `<head>`, and `<body>` tags to be present. Your Nuxt `layout.vue` and templates will not include these.
 
 Note the standard HTML templating, and direct access to `<head>`:  
 
