interpolation -> local variables

--- a/src/content/docs/en/guides/migrate-to-astro/from-nuxtjs.mdx
+++ b/src/content/docs/en/guides/migrate-to-astro/from-nuxtjs.mdx
@@ -267,12 +267,13 @@ See Astro's [testing guide](/en/guides/testing/) for more.
 
 ## Reference: Convert NuxtJS Syntax to Astro
 
-### Nuxt Variable Interpolation to Astro
+### Nuxt Local Variables to Astro
 
-To interpolate a variable in an Astro component, change the set of two curly braces to one set of curly braces:
+To use local variables in an Astro component's HTML, change the set of two curly braces to one set of curly braces:
 
 ```astro title="src/components/Component.astro" del={3} add={4}
 ---
+const message = "Hello!"
 ---
 <p>{{message}}</p>
 <p>{message}</p>
