--- a/src/content/docs/en/guides/recipes/nanostores.mdx
+++ b/src/content/docs/en/guides/recipes/nanostores.mdx
@@ -1,6 +1,6 @@
 ---
 title: Add an eCommerce cart using Nano Stores
-i18nReady: falso
+i18nReady: false
 ---
 
 import UIFrameworkTabs from '~/components/tabs/UIFrameworkTabs.astro'
