--- a/src/pages/fr/guides/testing.mdx
+++ b/src/pages/fr/guides/testing.mdx
@@ -7,7 +7,7 @@ i18nReady: true
 
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
-Le test vous aide à écrire et à maintenir du code Astro fonctionnel. Astro supporte une variété d'outils populaires pour les tests unitaires, tests des Composants, et test de bout en bout tel que Jest, Mocha, Jasmine, Cypress et Playwright. Vous pouvez même installer des librairies de test spécifique au framework de votre choix, par exemple, React Testing Library pour tester les Composants UI de vos frameworks. 
+Le test vous aide à écrire et à maintenir fonctionnel du code Astro. Astro supporte une variété d'outils populaires pour les tests unitaires, tests des Composants, et test de bout en bout tel que Jest, Mocha, Jasmine, Cypress et Playwright. Vous pouvez même installer des librairies de test spécifique au framework de votre choix, par exemple, React Testing Library pour tester les Composants UI de vos frameworks. 
 
 Tester vos frameworks vous permet de declarer des **assertions** ou des **attentes** sur le comportement de votre code dans un cas spécifique et de les comparer vis à vis du comportement actuel de votre code. 
 
@@ -74,12 +74,12 @@ test('meta is correct', async ({ page }) => {
 ```
 
 :::tip[Mettre un lien de base]
-Vous pouvez definir le [`"baseURL": "http://localhost:3000"`](https://playwright.dev/docs/api/class-testoptions#test-options-base-url) dans le fichier de configuration `playwright.config.ts` pour pouvoir utiliser `page.goto("/")` au lieu de `page.goto("http://localhost:3000/")` pour un lien plus pratique.  
+Pour un lien plus pratique, vous pouvez definir le [`"baseURL": "http://localhost:3000"`](https://playwright.dev/docs/api/class-testoptions#test-options-base-url) dans le fichier de configuration `playwright.config.ts` pour pouvoir utiliser `page.goto("/")` au lieu de `page.goto("http://localhost:3000/")`.  
 :::
 
 ### Executer vos tests Playwright 
 
-Vous pouvez executer un seul ou plusieurs tests à la fois, testant un ou plusieurs navigateurs. Par défaut, les resultats de vos tests seront montrés sur votre terminal. Si vous voulez le bilan complet et filtrer les resultats,  ouvrez le HTML Test Reporter.    
+Vous pouvez executer un ou plusieurs tests à la fois sur un ou plusieurs navigateurs. Par défaut, les resultats de vos tests seront montrés sur votre terminal. Si vous voulez le bilan complet et filtrer les resultats,  ouvrez le HTML Test Reporter.    
 
 1. Pour executer nos tests sur l'exemple précedant par commande de ligne, utilisez la commande `test`. Incluez le nom du fichier à tester si vous voulez executer un test singulier:
 ```sh
