fix as suggested by @MoustaphaDev

--- a/src/pages/fr/guides/testing.mdx
+++ b/src/pages/fr/guides/testing.mdx
@@ -9,7 +9,7 @@ import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 Le test vous aide à écrire et à maintenir fonctionnel du code Astro. Astro supporte une variété d'outils populaires pour les tests unitaires, tests des Composants, et test de bout en bout tel que Jest, Mocha, Jasmine, Cypress et Playwright. Vous pouvez même installer des librairies de test spécifique au framework de votre choix, par exemple, React Testing Library pour tester les Composants UI de vos frameworks. 
 
-Tester vos frameworks vous permet de declarer des **assertions** ou des **attentes** sur le comportement de votre code dans un cas spécifique et de les comparer vis à vis du comportement actuel de votre code. 
+Tester vos frameworks vous permet de déclarer des **assertions** ou des **attentes** sur le comportement de votre code dans un cas spécifique et de les comparer vis-à-vis du comportement actuel de votre code. 
 
 ## Vittest
 
@@ -23,9 +23,9 @@ Playwright est un framework de test de bout en bout pour des applications webs m
 
 ### Installation
 
-Vous pouvez commencer par éxecuter vos tests en utilisant [l'éxtension VS Code](https://playwright.dev/docs/getting-started-vscode)
+Vous pouvez commencer par exécuter vos tests en utilisant [l'extension VS Code](https://playwright.dev/docs/getting-started-vscode)
 
-Alternativement, vous pouvez aussi installer Playwright dans votre projet Astro via votre gestionnaire de packages preféré. Suivez les instructions CLI pour choisir entre JavaScript et TypeScript, nommer votre dossier, et ajouter des workflows falcutatifs de Github Actions.
+Alternativement, vous pouvez aussi installer Playwright dans votre projet Astro via votre gestionnaire de packages préféré. Suivez les instructions CLI pour choisir entre JavaScript et TypeScript, nommer votre dossier, et optionellement ajoutez un workflow falcutatifs de Github Actions.
 
 <PackageManagerTabs>
   <Fragment slot="npm">
@@ -74,10 +74,10 @@ test('meta is correct', async ({ page }) => {
 ```
 
 :::tip[Mettre un lien de base]
-Pour un lien plus pratique, vous pouvez definir le [`"baseURL": "http://localhost:3000"`](https://playwright.dev/docs/api/class-testoptions#test-options-base-url) dans le fichier de configuration `playwright.config.ts` pour pouvoir utiliser `page.goto("/")` au lieu de `page.goto("http://localhost:3000/")`.  
+Pour un lien plus pratique, vous pouvez définir le [`"baseURL": "http://localhost:3000"`](https://playwright.dev/docs/api/class-testoptions#test-options-base-url) dans le fichier de configuration `playwright.config.ts` pour pouvoir utiliser `page.goto("/")` au lieu de `page.goto("http://localhost:3000/")`.  
 :::
 
-### Executer vos tests Playwright 
+### Exécuter vos tests Playwright 
 
 Vous pouvez executer un ou plusieurs tests à la fois sur un ou plusieurs navigateurs. Par défaut, les resultats de vos tests seront montrés sur votre terminal. Si vous voulez le bilan complet et filtrer les resultats,  ouvrez le HTML Test Reporter.    
 
@@ -86,7 +86,7 @@ Vous pouvez executer un ou plusieurs tests à la fois sur un ou plusieurs naviga
 npx playwright test index.spec.ts
 ```
 
-2. Pour voir le bilan HTML complet, tapez la commande qui suive:
+2. Pour voir le bilan HTML complet, tapez la commande suivante:
 ```sh
 npx playwright show-report
 ```
@@ -97,12 +97,12 @@ Executez vos tests contre le code de production pour mieux ressembler à votre s
 
 #### Avancé: Lancer un serveur de development pendant les tests
 
-Quand vous executez vos script de test, vous pouvez aussi avoir Playwright lancer votre serveur en utilisant l'option [`webServer`](https://playwright.dev/docs/test-advanced#launching-a-development-web-server-during-the-tests) dans le fichier de configuration Playwright.
+Quand vous exécutez vos scripts de test, vous pouvez aussi avoir Playwright lancer votre serveur en utilisant l'option [`webServer`](https://playwright.dev/docs/test-advanced#launching-a-development-web-server-during-the-tests) dans le fichier de configuration Playwright.
 
 
 Voici un exemple des configurations et commandes via Yarn:
 
-1. Ajouter un script de test à votre fichier `package.json` dans la racine du projet, tel que `"test:e2e:" "playwright test"`.
+1. Ajoutez un script de test à votre fichier `package.json` dans la racine du projet, tel que `"test:e2e:" "playwright test"`.
 
 2. Dans `playwright.config.ts`, ajoutez l'objet `webServer` et changez la valeur de _command_ en `yarn preview`.
 
@@ -121,9 +121,9 @@ const config: PlaywrightTestConfig = {
 };
 export default config;
 ```
-3. Executez `yarn build`, ensuite executez `yarn test:e2e` pour courir les tests Playwright.
+3. Exécutez `yarn build`, ensuite exécutez `yarn test:e2e` pour lancer les tests Playwright.
 
 Pour plus d'information, veuillez voir les liens ci-dessous:
 
-- [Getting started with Playwright](https://playwright.dev/docs/intro)
-- [Use a development server](https://playwright.dev/docs/test-advanced#launching-a-development-web-server-during-the-tests)
+- [Commencer avec Playwright](https://playwright.dev/docs/intro)
+- [Lancer un serveur de développement](https://playwright.dev/docs/test-advanced#launching-a-development-web-server-during-the-tests)
