--- a/src/pages/fr/guides/testing.mdx
+++ b/src/pages/fr/guides/testing.mdx
@@ -95,7 +95,7 @@ npx playwright show-report
 Executez vos tests contre le code de production pour mieux ressembler à votre site en ligne.
 :::
 
-#### Avancé: Lancer un serveur de development pendant les tests
+#### Avancé: Lancer un serveur de dévelopment pendant les tests
 
 Quand vous exécutez vos scripts de test, vous pouvez aussi avoir Playwright lancer votre serveur en utilisant l'option [`webServer`](https://playwright.dev/docs/test-advanced#launching-a-development-web-server-during-the-tests) dans le fichier de configuration Playwright.
 
